# libsodium-sys-stable

./: .gitignore  Cargo.toml  LATEST.tar.gz.minisig  README.md  build.rs  libsodium-1.0.18-stable-mingw.tar.gz.minisig  libsodium-1.0.18-stable-msvc.zip.minisig  libsodium-1.0.18-stable.tar.gz.minisig  wit_to_wai.py
.github/workflows/: build.yml  cross.yml  ios.yml  native.yml  test.yml
examples/: wasi_component_test.rs  wasmer_wai_test.rs
examples/wasmer_host_test/: Cargo.toml
examples/wasmer_host_test/src/: main.rs
src/: component.rs  crypto_impl.rs  gen.sh  lib.rs  sodium_bindings.rs  wai_component.rs
tests/: wasi_component_test.rs
tests/crypto/: crypto_aead_aegis128l.rs  crypto_aead_aegis256.rs  crypto_aead_aes256gcm.rs  crypto_aead_xchacha20poly1305_ietf.rs  crypto_box_curve25519xchacha20poly1305.rs  crypto_core_ed25519.rs  crypto_core_hchacha20.rs  crypto_core_ristretto255.rs  crypto_generichash.rs  crypto_generichash_blake2b.rs  crypto_hash_sha3256.rs  crypto_hash_sha3512.rs  crypto_ipcrypt.rs  crypto_ipcrypt_nd.rs  crypto_ipcrypt_ndx.rs  crypto_ipcrypt_pfx.rs  crypto_kdf.rs  crypto_kdf_blake2b.rs  crypto_kdf_blake2b_bytes.rs  crypto_kdf_bytes.rs  crypto_kdf_hkdf_sha256.rs  crypto_kdf_hkdf_sha256_bytes.rs  crypto_kdf_hkdf_sha512.rs  crypto_kdf_hkdf_sha512_bytes.rs  crypto_kem.rs  crypto_kem_mlkem768.rs  crypto_kem_xwing.rs  crypto_pwhash.rs  crypto_pwhash_alg.rs  crypto_pwhash_argon2i.rs  crypto_pwhash_argon2i_alg.rs  crypto_pwhash_argon2i_bytes.rs  crypto_pwhash_argon2i_memlimit.rs  crypto_pwhash_argon2i_opslimit.rs  crypto_pwhash_argon2i_passwd.rs  crypto_pwhash_argon2id.rs  crypto_pwhash_argon2id_alg.rs  crypto_pwhash_argon2id_bytes.rs  crypto_pwhash_argon2id_memlimit.rs  crypto_pwhash_argon2id_opslimit.rs  (+28 more)
wai/: libsodium.wai
wit/: libsodium.wit
