[package]
edition = "2021"
authors = ["dnaq", "jedisct1"]
build = "build.rs"
description = "Maintained FFI bindings for libsodium stable"
documentation = "https://docs.rs/libsodium-sys-stable"
keywords = ["libsodium", "NaCl", "crypto", "cryptography"]
license = "MIT OR Apache-2.0"
links = "sodium"
name = "libsodium-sys-stable"
repository = "https://github.com/jedisct1/libsodium-sys-stable"
categories = ["cryptography", "api-bindings"]
version = "1.23.0"

[build-dependencies]
cc = "1.2.51"
libflate = "2.2.1"
minisign-verify = "0.2.4"
pkg-config = "0.3.32"
tar = "0.4.44"
ureq = { version = "3.1.4", default-features = false }
vcpkg = "0.2.15"
zip = { version = "7.0", default-features = false, features = ["deflate"] }

[dependencies]
libc = { version = "0.2", default-features = false }
wit-bindgen = { version = "0.50", optional = true, default-features = false, features = ["macros"] }
wai-bindgen-rust = { version = "0.2.3", optional = true }

[lib]
name = "libsodium_sys"

[features]
default = []
use-pkg-config = []
fetch-latest = []
optimized = []
minimal = []
wasi-component = ["wit-bindgen"]
wasmer-wai = ["wai-bindgen-rust"]
